--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
   cupertino_icons: ^1.0.2
 
   get: ^4.1.4
+  bubble: ^1.2.1
+  flutter_screenutil: ^5.0.0+2
 
 dev_dependencies:
   flutter_test:
